--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Polyglot AI Dictionary</title>
+    <title> dvdictionary AI Dictionary</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Fraunces:ital,opsz,wght@0,9..144,400;0,9..144,700;1,9..144,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Fraunces:ital,opsz,wght@0,9..144,400;0,9..144,700;1,9..144,400&family=Inter:wght@300;400;500;600;700;800&family=Noto+Sans:wght@300;400;500;600;700;800&family=Noto+Serif:wght@400;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         :root {
             --bg-mesh: radial-gradient(at 0% 0%, rgba(79, 70, 229, 0.05) 0, transparent 50%), 
@@ -17,11 +17,11 @@
                        radial-gradient(at 0% 100%, rgba(249, 115, 22, 0.05) 0, transparent 50%);
         }
         body { 
-            font-family: 'Plus Jakarta Sans', sans-serif; 
+            font-family: 'Inter', 'Noto Sans', 'Roboto', 'Plus Jakarta Sans', sans-serif; 
             background-color: #fafafa;
             background-image: var(--bg-mesh);
         }
-        .serif-modern { font-family: 'Fraunces', serif; }
+        .serif-modern { font-family: 'Fraunces', 'Noto Serif', 'Roboto', serif; }
         .glass-card { 
             background: rgba(255, 255, 255, 0.7); 
             backdrop-filter: blur(20px); 
